--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -162,6 +162,8 @@ jobs:
           fetch-depth: 0
       - name: Compile binary
         uses: thatisuday/go-cross-build@v1
+        env:
+          INPUT_LDFLAGS: "-s -w -X main.PKG_VERSION=${{ needs.prepare.outputs.RELEASE_VERSION }}"
         with:
           platforms: linux/amd64,darwin/amd64,windows/amd64,linux/arm64,darwin/amd64
           name: semver-gen
