--- a/action.yml
+++ b/action.yml
@@ -17,12 +17,8 @@ inputs:
     description: 'Use already cloned repository in current directory'
     required: false
 outputs:
-  semver:
+  semantic_version:
     description: 'Calculated semantic version'
 runs:
   using: 'docker'
   image: 'docker://ghcr.io/lukaszraczylo/semver-generator:latest'
-  args:
-    - ${{ inputs.config_file }}
-    - ${{ inputs.repository_url }}
-    - ${{ inputs.repository_local }}
