--- a/action.yml
+++ b/action.yml
@@ -21,4 +21,4 @@ outputs:
     description: 'Calculated semantic version'
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/lukaszraczylo/semver-generator:latest'
+  image: Dockerfile-action
