--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -164,7 +164,7 @@ jobs:
       - name: Compile binary
         uses: thatisuday/go-cross-build@v1.0.2
         with:
-          platforms: linux/amd64,darwin/amd64,windows/amd64,linux/arm64,darwin/amd64
+          platforms: linux/amd64,darwin/amd64,windows/amd64,linux/arm64,darwin/amd64,darwin/arm64
           name: semver-gen
           package: ./
           compress: false
