Add the release candidate to versioning.

--- a/config.yaml
+++ b/config.yaml
@@ -7,8 +7,9 @@ wording:
     - initial
     - fix
   minor:
-    - add
     - change
     - improve
   major:
     - breaking
+  release:
+    - release-candidate
