--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -189,21 +189,21 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: dist/semver-gen-*
-          tag_name: ${{ needs.prepare.outputs.RELEASE_VERSION }}
-          name: ${{ needs.prepare.outputs.RELEASE_VERSION }}
+          tag_name: v1
+          name: v1
           body_path: .release_notes
           draft: false
           prerelease: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
-      - name: Create Release v1
-        id: create_release_v1
+      - name: Create Release
+        id: create_release
         uses: softprops/action-gh-release@v1
         if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: dist/semver-gen-*
-          tag_name: v1
-          name: v1
+          tag_name: ${{ needs.prepare.outputs.RELEASE_VERSION }}
+          name: ${{ needs.prepare.outputs.RELEASE_VERSION }}
           body_path: .release_notes
           draft: false
           prerelease: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
