--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -193,16 +193,23 @@ jobs:
           body_path: .release_notes
           draft: false
           prerelease: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
+      - name: Delete previous v1 release asset
+        uses: mknejp/delete-release-assets@v1
+        with:
+          token: ${{ github.token }}
+          fail-if-no-assets: false
+          tag: v1
+          assets: 'semver-gen-*'
       - name: Create Release
-        id: create_release
+        id: create_release_global
         uses: softprops/action-gh-release@v1
         if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: dist/semver-gen-*
-          tag_name: ${{ needs.prepare.outputs.RELEASE_VERSION }}
-          name: ${{ needs.prepare.outputs.RELEASE_VERSION }}
+          tag_name: v1
+          name: v1
           body_path: .release_notes
           draft: false
           prerelease: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
