Pin release workflow version to 0.1.5 Current workflow have issues with outdated libraries.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -182,7 +182,7 @@ jobs:
           echo "$(git log $(git describe --tags --abbrev=0)..HEAD --pretty=format:"%h %s")" > .release_notes
       - name: Create Release
         id: create_release
-        uses: softprops/action-gh-release@v0.1.7
+        uses: softprops/action-gh-release@v0.1.5
         if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -200,9 +200,9 @@ jobs:
           fail-if-no-assets: false
           tag: v1
           assets: 'semver-gen-*'
-      - name: Create Release
+      - name: Create Release V1
         id: create_release_global
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v0.1.5
         if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
