--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -197,14 +197,14 @@ jobs:
           # body_path: .release_notes
           # draft: false
           prerelease: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
-      - name: Delete previous v1 release asset
-        uses: mknejp/delete-release-assets@v1
-        with:
-          token: ${{ github.token }}
-          fail-if-no-assets: false
-          fail-if-no-release: false
-          tag: v1
-          assets: 'semver-gen-*'
+      # - name: Delete previous v1 release asset
+      #   uses: mknejp/delete-release-assets@v1
+      #   with:
+      #     token: ${{ github.token }}
+      #     fail-if-no-assets: false
+      #     fail-if-no-release: false
+      #     tag: v1
+      #     assets: 'semver-gen-*'
       - name: Create Release V1
         id: create_release_global
         uses: marvinpinto/action-automatic-releases@latest
