--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -205,7 +205,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Compile binary
+      - name: Compile and release semver
         uses: wangyoucao577/go-release-action@v1.32
         with:
           github_token: ${{ secrets.GHCR_TOKEN }}
@@ -217,6 +217,23 @@ jobs:
           asset_name: semver-gen-${{ matrix.goos }}-${{ matrix.goarch }}
           release_name: version ${{ needs.prepare.outputs.RELEASE_VERSION }}
           release_tag: ${{ needs.prepare.outputs.RELEASE_VERSION }}
+          compress_assets: false
+          retry: 10
+          overwrite: true
+          pre_command: export GODEBUG=http2client=0
+
+      - name: Compile and release v1
+        uses: wangyoucao577/go-release-action@v1.32
+        with:
+          github_token: ${{ secrets.GHCR_TOKEN }}
+          goos: ${{ matrix.goos }}
+          goarch: ${{ matrix.goarch }}
+          ldflags: -s -w -X main.PKG_VERSION=${{ needs.prepare.outputs.RELEASE_VERSION }}
+          project_path: .
+          binary_name: semver-gen
+          asset_name: semver-gen-${{ matrix.goos }}-${{ matrix.goarch }}
+          release_name: version v1:${{ needs.prepare.outputs.RELEASE_VERSION }}
+          release_tag: v1
           compress_assets: false
           retry: 10
           overwrite: true
