--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,7 @@ env:
   ENABLE_CODE_LINT: false
   ENABLE_CODE_SCANS: false
   DEPLOY: false
+  GO_VERSION: 1.19
 
 jobs:
   prepare:
@@ -61,6 +62,10 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+      - name: Install Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ env.GO_VERSION }}
       - name: Lint Code Base
         if: env.ENABLE_CODE_LINT == true
         env:
@@ -92,6 +97,10 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+      - name: Install Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ env.GO_VERSION }}
       - name: Configure git for private modules
         run: |
           make update
@@ -205,6 +214,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Install Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ env.GO_VERSION }}
       - name: Compile and release semver
         uses: wangyoucao577/go-release-action@v1.32
         with:
