--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -218,7 +218,7 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
       - name: Compile and release semver
-        uses: wangyoucao577/go-release-action@v1.33
+        uses: wangyoucao577/go-release-action@v1.34
         with:
           github_token: ${{ secrets.GHCR_TOKEN }}
           goos: ${{ matrix.goos }}
@@ -232,7 +232,7 @@ jobs:
           compress_assets: false
           retry: 10
           overwrite: true
-          pre_command: export GODEBUG=http2client=0
+          pre_command: export GODEBUG=http2client=0 && make update
 
       - name: Compile and release v1
         uses: wangyoucao577/go-release-action@v1.33
@@ -249,4 +249,4 @@ jobs:
           compress_assets: false
           retry: 10
           overwrite: true
-          pre_command: export GODEBUG=http2client=0
+          pre_command: export GODEBUG=http2client=0 && make update
